# mlp

./: .gitignore  :w  Cargo.toml  README.md  loss_records.txt
examples/: forward_benchmark.rs  minimal.rs  xor.rs
src/: activation.rs  deriv_buffer.rs  gym.rs  lib.rs  main.rs  nn.rs  pretty_print.rs  ptr.rs  utils.rs
src/big_matrices/: matrix.rs
src/buffers/: deriv_buffer.rs  mod.rs  param_buffer.rs  result_buffer.rs
src/core/: back_propagation.rs  deriv_buffer.rs  forward.rs  mod.rs  param_buffer.rs  result_buffer.rs
src/gym/: back_propagation.rs  deriv_buffer.rs  mod.rs
src/linear_algebra/: matrix.rs  vector.rs
