[package]
name = "mlp"
version = "0.1.0"
edition = "2024"

[dependencies]
bytemuck = { version = "1.24.0", features = ["alloc_uninit", "extern_crate_alloc", "zeroable_maybe_uninit"] }
derive_more = { version="2.0.1", features=["full"] }
faer = "0.23.2"
rand = "0.9.2"
rayon = "1.11.0"

[dev-dependencies]
gnuplot = "0.0.46"
num_cpus = "1.17.0"
image = "0.25.9"
chrono = "0.4.42"
colors-transform = "0.2.11"
clap = { version = "4.5.53", features = ["derive"] }

[lib]
